--- a/res/values-sq/strings.xml
+++ b/res/values-sq/strings.xml
@@ -1,7 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="about_android">Aplikacion %1$s Android</string>
-  <string name="about_version">versioni %1$s</string>
   <string name="actionbar_search">Kërko në këtë dosje</string>
   <string name="actionbar_sync">Freskoni llogarinë</string>
   <string name="actionbar_upload">Ngarkoni</string>
@@ -18,11 +16,7 @@
   <string name="actionbar_sort_by_name">A-Z</string>
   <string name="actionbar_sort_by_date">Më e vjetra - Më e reja</string>
   <string name="actionbar_sort_by_size">Më e vogla - Më e madhja</string>
-  <!--TODO re-enable when "Accounts" is available in Navigation Drawer-->
-  <!--<string name="drawer_item_accounts">Accounts</string>-->
   <string name="drawer_item_all_files">Krejt kartelat</string>
-  <!--TODO re-enable when "On Device" is available
-    <string name="drawer_item_on_device">On device</string>-->
   <string name="drawer_item_settings">Rregullime</string>
   <string name="drawer_item_uploads_list">Ngarkime</string>
   <string name="drawer_close">Mbylle</string>
@@ -100,6 +94,7 @@
   <string name="file_list_no_app_for_file_type">S\’u gjet aplikacion për llojin e kartelës</string>
   <string name="local_file_list_empty">Në këtë dosje s\’ka kartela.</string>
   <string name="local_file_list_empty_just_folders">S\’ka dosje brenda kësaj dosjeje.</string>
+  <string name="local_file_list_search_with_no_matches">S’ka përputhje për këtë kërkim</string>
   <string name="upload_list_empty">S\’ka ngarkime te gatshme.</string>
   <string name="file_list_folder">dosje</string>
   <string name="file_list_folders">dosje</string>
@@ -119,15 +114,13 @@
   <string name="action_share">Ndaje</string>
   <string name="common_yes">Po</string>
   <string name="common_no">Jo</string>
-  <string name="common_ok">OK</string>
   <string name="common_remove_upload">Hiqe ngarkimin</string>
   <string name="common_retry_upload">Riprovo ngarkimin</string>
   <string name="common_cancel_sync">Anuloje njëkohësimin</string>
-  <string name="common_cancel">Anuloje</string>
   <string name="common_back">Mbrapsht</string>
   <string name="common_save_exit">Ruaje &amp; dil</string>
   <string name="common_error">Gabim</string>
-  <string name="common_loading">Po ngarkohet …</string>
+  <string name="common_loading">Po ngarkohet…</string>
   <string name="common_unknown">i panjohur</string>
   <string name="common_error_unknown">Gabim i panjohur</string>
   <string name="common_pending">Në pritje</string>
@@ -135,9 +128,7 @@
   <string name="change_password">Ndryshoni fjalëkalimin</string>
   <string name="delete_account">Hiqe llogarinë</string>
   <string name="create_account">Krijoni llogari</string>
-  <string name="upload_chooser_title">Ngarkojeni prej …</string>
   <string name="uploader_info_dirname">Emër dosjeje</string>
-  <string name="uploader_upload_in_progress_ticker">Po ngarkohet …</string>
   <string name="uploader_upload_in_progress_content">%1$d%% Po ngarkohet %2$s</string>
   <string name="uploader_upload_succeeded_ticker">Ngarkimi doli me sukses</string>
   <string name="uploader_upload_succeeded_content_single">%1$s u ngarkua</string>
@@ -154,8 +145,6 @@
   <string name="uploads_view_group_current_uploads">Të tanishëm</string>
   <string name="uploads_view_group_failed_uploads">Dështoi (prekeni që të riprovohet)</string>
   <string name="uploads_view_group_finished_uploads">U ngarkua</string>
-  <string name="uploads_view_group_file_count">%d kartela</string>
-  <string name="uploads_view_group_file_count_single">Kartelë %d</string>
   <string name="uploads_view_upload_status_succeeded">Të plotësuara</string>
   <string name="uploads_view_upload_status_cancelled">Anuluar</string>
   <string name="uploads_view_upload_status_paused">Pushuar</string>
@@ -173,7 +162,6 @@
   <string name="uploads_view_upload_status_waiting_for_wifi">Po pritet për lidhje wifi</string>
   <string name="uploads_view_later_waiting_to_upload">Po pritet për ngarkim</string>
   <string name="uploads_view_unsupported_media_type">Lloj media i pambuluar</string>
-  <string name="downloader_download_in_progress_ticker">Po shkarkohet …</string>
   <string name="downloader_download_in_progress_content">%1$d%% Shkarkim %2$s</string>
   <string name="downloader_download_succeeded_ticker">Shkarkimi doli me sukses</string>
   <string name="downloader_download_succeeded_content">%1$s u shkarkua</string>
@@ -237,8 +225,7 @@
   <string name="media_play_pause_description">Butoni Luaje ose Pushoje</string>
   <string name="media_forward_description">Butoni Përpara</string>
   <string name="upload_from_camera_title">Foto nga kamera</string>
-  <string name="auth_getting_authorization">Po merret autorizim …</string>
-  <string name="auth_trying_to_login">Po provohet hyrja …</string>
+  <string name="auth_getting_authorization">Po merret autorizim…</string>
   <string name="auth_no_net_conn_title">Pa lidhje rrjeti</string>
   <string name="auth_nossl_plain_ok_title">S\’ka lidhje të sigurt.</string>
   <string name="auth_connection_established">Lidhja u vendos</string>
@@ -292,7 +279,6 @@
   <string name="wait_checking_credentials">Po kontrollohen kredenciale të depozituara</string>
   <string name="filedisplay_unexpected_bad_get_content">Problem i papritur; ju lutemi, përzgjidhni një kartelë nga një aplikacion tjetër</string>
   <string name="filedisplay_no_file_selected">S\’u përzgjodh kartelë</string>
-  <string name="activity_chooser_title">Dërgoni lidhje te …</string>
   <string name="wait_for_tmp_copy_from_private_storage">Po kopjohet kartelë nga depo private</string>
   <string name="oauth_check_onoff">Hyrje me oAuth2</string>
   <string name="oauth_login_connection">Po lidhet te shërbyesi OAuth2…</string>
@@ -382,8 +368,9 @@
   <string name="log_send_history_button">Historik dërgimesh</string>
   <string name="log_send_no_mail_app">S\’u gjet aplikacion për dërgim regjistrimesh. Ju lutemi, instaloni një aplikacion email-esh.</string>
   <string name="log_send_mail_subject">Regjistra aplikacioni %1$s për Android</string>
-  <string name="log_progress_dialog_text">Po ngarkohen të dhëna …</string>
+  <string name="log_progress_dialog_text">Po ngarkohen të dhëna…</string>
   <string name="actionbar_select_all">Përzgjidhi krejt</string>
+  <string name="actionbar_select_inverse">Përzgjidhe së prapthi</string>
   <string name="saml_authentication_required_text">Lypset mirëfilltësim</string>
   <string name="saml_authentication_wrong_pass">Fjalëkalim i gabuar</string>
   <string name="actionbar_move">Zhvendose</string>
@@ -421,8 +408,6 @@
   <string name="prefs_camera_upload_source_path_title">Dosje kamere (%1$s)</string>
   <string name="prefs_camera_upload_source_path_title_required">e domosdoshme</string>
   <string name="prefs_camera_upload_source_path_title_optional">opsionale</string>
-  <string name="prefs_camera_upload_behaviour_dialogTitle">Kartela origjinale do të jetë...</string>
-  <string name="prefs_camera_upload_behaviour_title">Kartela origjinale do të jetë...</string>
   <string name="upload_copy_files">Kopjoje kartelën</string>
   <string name="upload_move_files">Lëvize kartelën</string>
   <string name="pref_behaviour_entries_keep_file">mbajtur në dosjen origjinale</string>
@@ -446,7 +431,7 @@
   <string name="share_via_link_edit_permission_read_and_write_label">Të shkarkojë / Të shohë / Të ngarkojë</string>
   <string name="share_via_link_edit_permission_upload_only_label">Vetëm Ngarkime (Me Lënie Kartelash)</string>
   <string name="share_get_public_link_button">Merreni lidhjen</string>
-  <string name="share_with_title">Ndajeni me …</string>
+  <string name="share_with_title">Ndajeni me</string>
   <string name="share_with_edit_title">Ndajeni me %1$s</string>
   <string name="share_search">Kërko</string>
   <string name="search_users_and_groups_hint">Kërkoni për grupe dhe përdorues</string>
