--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -1,7 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="about_android">%1$s Android-App</string>
-  <string name="about_version">Version %1$s</string>
+  <string name="actionbar_search">Diesen Ordner durchsuchen</string>
   <string name="actionbar_sync">Konto aktualisieren</string>
   <string name="actionbar_upload">Datei hochladen</string>
   <string name="actionbar_upload_from_apps">Inhalt von anderen Apps</string>
@@ -17,11 +16,7 @@
   <string name="actionbar_sort_by_name">A-Z</string>
   <string name="actionbar_sort_by_date">Älteste - Neueste</string>
   <string name="actionbar_sort_by_size">Kleinste - Größte</string>
-  <!--TODO re-enable when "Accounts" is available in Navigation Drawer-->
-  <!--<string name="drawer_item_accounts">Accounts</string>-->
   <string name="drawer_item_all_files">Alle Dateien</string>
-  <!--TODO re-enable when "On Device" is available
-    <string name="drawer_item_on_device">On device</string>-->
   <string name="drawer_item_settings">Einstellungen</string>
   <string name="drawer_item_uploads_list">Uploads</string>
   <string name="drawer_close">Schließen</string>
@@ -100,6 +95,7 @@
   <string name="file_list_no_app_for_file_type">Keine Applikationen für diesen Dateityp gefunden</string>
   <string name="local_file_list_empty">Es befinden sich keine Dateien in diesem Ordner.</string>
   <string name="local_file_list_empty_just_folders">Es befinden sich keine Ordner in diesem Ordner.</string>
+  <string name="local_file_list_search_with_no_matches">Keine Treffer für diese Suche</string>
   <string name="upload_list_empty">Es</string>
   <string name="file_list_folder">Ordner</string>
   <string name="file_list_folders">Ordner</string>
@@ -119,11 +115,9 @@
   <string name="action_share">Teilen</string>
   <string name="common_yes">Ja</string>
   <string name="common_no">Nein</string>
-  <string name="common_ok">OK</string>
   <string name="common_remove_upload">Upload entfernen</string>
   <string name="common_retry_upload">hochladen erneut versuchen</string>
   <string name="common_cancel_sync">Synchronisation abbrechen</string>
-  <string name="common_cancel">Abbrechen</string>
   <string name="common_back">Zurück</string>
   <string name="common_save_exit">Speichern &amp; verlassen</string>
   <string name="common_error">Fehler</string>
@@ -135,9 +129,7 @@
   <string name="change_password">Passwort ändern</string>
   <string name="delete_account">Benutzerkonto löschen</string>
   <string name="create_account">Account erstellen</string>
-  <string name="upload_chooser_title">Dateien hochladen von…</string>
   <string name="uploader_info_dirname">Ordnername</string>
-  <string name="uploader_upload_in_progress_ticker">Hochladen…</string>
   <string name="uploader_upload_in_progress_content">%1$d%% Hochladen %2$s</string>
   <string name="uploader_upload_succeeded_ticker">Hochladen erfolgreich</string>
   <string name="uploader_upload_succeeded_content_single">%1$s hochgeladen</string>
@@ -154,8 +146,6 @@
   <string name="uploads_view_group_current_uploads">Wird hochgeladen</string>
   <string name="uploads_view_group_failed_uploads">Fehlgeschlagen (Tippen zum Wiederholen)</string>
   <string name="uploads_view_group_finished_uploads">Hochgeladen</string>
-  <string name="uploads_view_group_file_count">%d Dateien</string>
-  <string name="uploads_view_group_file_count_single">%d Datei</string>
   <string name="uploads_view_upload_status_succeeded">Fertiggestellt</string>
   <string name="uploads_view_upload_status_cancelled">abgebrochen</string>
   <string name="uploads_view_upload_status_paused">pausiert</string>
@@ -173,7 +163,6 @@
   <string name="uploads_view_upload_status_waiting_for_wifi">warten auf eine WLAN Verbindung </string>
   <string name="uploads_view_later_waiting_to_upload">Warten auf hochladen</string>
   <string name="uploads_view_unsupported_media_type">Nicht unterstützter Medientyp</string>
-  <string name="downloader_download_in_progress_ticker">Herunterladen…</string>
   <string name="downloader_download_in_progress_content">%1$d%% Herunterladen %2$s</string>
   <string name="downloader_download_succeeded_ticker">Herunterladen erfolgreich</string>
   <string name="downloader_download_succeeded_content">%1$s heruntergeladen</string>
@@ -237,8 +226,7 @@
   <string name="media_play_pause_description">Play-/Pause Knopf</string>
   <string name="media_forward_description">Vorspulen Knopf</string>
   <string name="upload_from_camera_title">Kamerabild</string>
-  <string name="auth_getting_authorization">Genehmigung bekommen ...</string>
-  <string name="auth_trying_to_login">Der Versuch, sich anzumelden ...</string>
+  <string name="auth_getting_authorization">Autorisierung empfangen…</string>
   <string name="auth_no_net_conn_title">Keine Netzwerkverbindung</string>
   <string name="auth_nossl_plain_ok_title">Sichere Verbindung nicht verfügbar.</string>
   <string name="auth_connection_established">Verbindung hergestellt</string>
@@ -293,7 +281,6 @@
   <string name="wait_checking_credentials">Überprüfe gespeicherte Anmeldeinformationen</string>
   <string name="filedisplay_unexpected_bad_get_content">Ein unerwartetes Problem ist aufgetreten. Bitte versuche, die Datei in einer anderen App zu öffnen</string>
   <string name="filedisplay_no_file_selected">Es wurde keine Datei ausgewählt.</string>
-  <string name="activity_chooser_title">Link senden an…</string>
   <string name="wait_for_tmp_copy_from_private_storage">Kopiere Datei vom privatem Speicher</string>
   <string name="oauth_check_onoff">Anmelden mit oAuth2</string>
   <string name="oauth_login_connection">Verbinde zum OAuth2-Server...</string>
@@ -384,7 +371,7 @@
   <string name="log_send_history_button">versende die Chronik</string>
   <string name="log_send_no_mail_app">Es wurde keine App gefunden die Logs verschicken kann. Bitte installiere eine App die E-Mails verschicken kann.</string>
   <string name="log_send_mail_subject">%1$s Android-App Meldungen</string>
-  <string name="log_progress_dialog_text">Daten werden geladen</string>
+  <string name="log_progress_dialog_text">Lade Daten…</string>
   <string name="actionbar_select_all">Alle auswählen</string>
   <string name="saml_authentication_required_text">Legitimierung benötigt</string>
   <string name="saml_authentication_wrong_pass">Falsches Passwort</string>
@@ -423,8 +410,6 @@
   <string name="prefs_camera_upload_source_path_title">Kamera-Ordner (%1$s)</string>
   <string name="prefs_camera_upload_source_path_title_required">Benötigt</string>
   <string name="prefs_camera_upload_source_path_title_optional">Optional</string>
-  <string name="prefs_camera_upload_behaviour_dialogTitle">Originaldatei wird...</string>
-  <string name="prefs_camera_upload_behaviour_title">Originaldatei wird...</string>
   <string name="upload_copy_files">kopiere Datei</string>
   <string name="upload_move_files">verschiebe Datei</string>
   <string name="pref_behaviour_entries_keep_file">im Originalordner behalten</string>
@@ -448,7 +433,7 @@
   <string name="share_via_link_edit_permission_read_and_write_label">Herunterladen / Ansehen / Hochladen</string>
   <string name="share_via_link_edit_permission_upload_only_label">Nur Hochladen (Datei hineinziehen)</string>
   <string name="share_get_public_link_button">Link erhalten</string>
-  <string name="share_with_title">Teile mit ...</string>
+  <string name="share_with_title">Teilen mit</string>
   <string name="share_with_edit_title">Teile mit %1$s</string>
   <string name="share_search">Suche</string>
   <string name="search_users_and_groups_hint">Nutzer und Gruppen suchen</string>
@@ -530,9 +515,11 @@
   <string name="welcome_feature_4_text">Deine Bilder/Videos werden automatisch hochgeladen</string>
   <string name="welcome_feature_5_title">Videostreaming</string>
   <string name="welcome_feature_5_text">Gib deine Videos wieder, ohne sie herunterzuladen</string>
+  <string name="welcome_feature_6_title">Speichergrenze</string>
   <string name="welcome_feature_6_text">Kenne Deinen verfügbaren und freien Speicherplatz</string>
   <string name="welcome_feature_7_title">Neue Icons</string>
   <string name="welcome_feature_7_text">Um Dateien herunterzuladen und als offline verfügbar zu markieren</string>
   <string name="welcome_feature_8_title">Neue Pins</string>
+  <string name="welcome_feature_8_text">Synchronisieren, heruntergeladene und offline Dateien</string>
   <string name="no_borwser_installed_alert">Es ist kein Browser installiert. Bitte installieren Sie zur sicheren Anmeldung einen Browser.</string>
 </resources>
