--- a/res/values-fi-rFI/strings.xml
+++ b/res/values-fi-rFI/strings.xml
@@ -1,7 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="about_android">%1$s-Android-sovellus</string>
-  <string name="about_version">versio %1$s</string>
   <string name="actionbar_sync">Päivitä tili</string>
   <string name="actionbar_upload">Lähetä tiedosto</string>
   <string name="actionbar_upload_from_apps">Sisältö toisista sovelluksista</string>
@@ -17,11 +15,7 @@
   <string name="actionbar_sort_by_name">A-Ö</string>
   <string name="actionbar_sort_by_date">Vanhin - Uusin</string>
   <string name="actionbar_sort_by_size">Pienin - Suurin</string>
-  <!--TODO re-enable when "Accounts" is available in Navigation Drawer-->
-  <!--<string name="drawer_item_accounts">Accounts</string>-->
   <string name="drawer_item_all_files">Kaikki tiedostot</string>
-  <!--TODO re-enable when "On Device" is available
-    <string name="drawer_item_on_device">On device</string>-->
   <string name="drawer_item_settings">Asetukset</string>
   <string name="drawer_item_uploads_list">Lataukset</string>
   <string name="drawer_close">Sulje</string>
@@ -114,11 +108,9 @@
   <string name="action_share">Jaa</string>
   <string name="common_yes">Kyllä</string>
   <string name="common_no">Ei</string>
-  <string name="common_ok">OK</string>
   <string name="common_remove_upload">Poista lähetys</string>
   <string name="common_retry_upload">Yritä lähettämistä uudelleen</string>
   <string name="common_cancel_sync">Peru synkronointi</string>
-  <string name="common_cancel">Peru</string>
   <string name="common_back">Takaisin</string>
   <string name="common_save_exit">Tallenna &amp; poistu</string>
   <string name="common_error">Virhe</string>
@@ -130,9 +122,7 @@
   <string name="change_password">Vaihda salasana</string>
   <string name="delete_account">Poista tili</string>
   <string name="create_account">Luo tili</string>
-  <string name="upload_chooser_title">Lataus täältä:</string>
   <string name="uploader_info_dirname">Kansion nimi</string>
-  <string name="uploader_upload_in_progress_ticker">Lähetetään...</string>
   <string name="uploader_upload_in_progress_content">%1$d%% Lähetetään palvelimelle %2$s</string>
   <string name="uploader_upload_succeeded_ticker">Lähetys onnistui</string>
   <string name="uploader_upload_succeeded_content_single">%1$s lähetetty</string>
@@ -149,8 +139,6 @@
   <string name="uploads_view_group_current_uploads">Nykyiset</string>
   <string name="uploads_view_group_failed_uploads">Epäonnistui (kosketa yrittääksesi uudelleen)</string>
   <string name="uploads_view_group_finished_uploads">Lähetetty</string>
-  <string name="uploads_view_group_file_count">%d tiedostoa</string>
-  <string name="uploads_view_group_file_count_single">%d tiedosto</string>
   <string name="uploads_view_upload_status_succeeded">Valmiina</string>
   <string name="uploads_view_upload_status_cancelled">Peruttu</string>
   <string name="uploads_view_upload_status_paused">Keskeytetty</string>
@@ -168,7 +156,6 @@
   <string name="uploads_view_upload_status_waiting_for_wifi">Odotetaan wifi-yhteyttä</string>
   <string name="uploads_view_later_waiting_to_upload">Odottaa siirtoa</string>
   <string name="uploads_view_unsupported_media_type">Ei-tuettu mediatyyppi</string>
-  <string name="downloader_download_in_progress_ticker">Ladataan...</string>
   <string name="downloader_download_in_progress_content">%1$d%% ladataan palvelimelta %2$s</string>
   <string name="downloader_download_succeeded_ticker">Lataus tänne onnistui</string>
   <string name="downloader_download_succeeded_content">%1$s ladattu</string>
@@ -224,8 +211,7 @@
   <string name="media_rewind_description">Taaksepäin kelaus -painike</string>
   <string name="media_play_pause_description">Toisto tai keskeytys -painike</string>
   <string name="media_forward_description">Eteenpäin kelaus -painike</string>
-  <string name="auth_getting_authorization">Hankitaan valtuutus…</string>
-  <string name="auth_trying_to_login">Yritetään kirjautua sisään…</string>
+  <string name="auth_getting_authorization">Noudetaan valtuutusta…</string>
   <string name="auth_no_net_conn_title">Ei verkkoyhteyttä</string>
   <string name="auth_nossl_plain_ok_title">Salattu yhteys ei ole käytettävissä.</string>
   <string name="auth_connection_established">Yhteys muodostettu</string>
@@ -279,7 +265,6 @@
   <string name="wait_checking_credentials">Tarkistetaan tallennettuja tilitietoja</string>
   <string name="filedisplay_unexpected_bad_get_content">Odottamaton ongelma; kokeile valita tiedosto toisella sovelluksella</string>
   <string name="filedisplay_no_file_selected">Tiedostoa ei valittu</string>
-  <string name="activity_chooser_title">Lähetä linkki…</string>
   <string name="wait_for_tmp_copy_from_private_storage">Kopioidaan tiedostoa yksityisestä tallennustilasta</string>
   <string name="oauth_check_onoff">Kirjaudu oAuth2:lla</string>
   <string name="oauth_login_connection">Yhdistetään OAuth2-palvelimeen…</string>
@@ -409,8 +394,6 @@
   <string name="prefs_camera_upload_source_path_title">Kamerakansio (%1$s)</string>
   <string name="prefs_camera_upload_source_path_title_required">vaadittu</string>
   <string name="prefs_camera_upload_source_path_title_optional">valinnainen</string>
-  <string name="prefs_camera_upload_behaviour_dialogTitle">Alkuperäinen tiedosto...</string>
-  <string name="prefs_camera_upload_behaviour_title">Alkuperäinen tiedosto...</string>
   <string name="upload_copy_files">Kopioi tiedosto</string>
   <string name="upload_move_files">Siirrä tiedosto</string>
   <string name="pref_behaviour_entries_keep_file">pidetään alkuperäisessä kansiossa</string>
@@ -434,7 +417,7 @@
   <string name="share_via_link_edit_permission_read_and_write_label">Lataa / Näytä / Lähetä</string>
   <string name="share_via_link_edit_permission_upload_only_label">Vain lähetys (Tiedostojen pudotus)</string>
   <string name="share_get_public_link_button">Hanki linkki</string>
-  <string name="share_with_title">Jaa…</string>
+  <string name="share_with_title">Jaa</string>
   <string name="share_with_edit_title">Jaa käyttäjän %1$s kanssa</string>
   <string name="share_search">Etsi</string>
   <string name="search_users_and_groups_hint">Etsi käyttäjiä ja ryhmiä</string>
