--- a/res/values-is/strings.xml
+++ b/res/values-is/strings.xml
@@ -1,7 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="about_android">%1$s Android-forrit</string>
-  <string name="about_version">útgáfa %1$s</string>
   <string name="actionbar_sync">Endurlesa aðgang</string>
   <string name="actionbar_upload">Senda inn</string>
   <string name="actionbar_upload_from_apps">Efni frá öðrum forritum</string>
@@ -14,11 +12,7 @@
   <string name="actionbar_sort">Raða</string>
   <string name="actionbar_sort_title">Raða sem</string>
   <string name="actionbar_sort_by_name">A-Z</string>
-  <!--TODO re-enable when "Accounts" is available in Navigation Drawer-->
-  <!--<string name="drawer_item_accounts">Accounts</string>-->
   <string name="drawer_item_all_files">Allar skrár</string>
-  <!--TODO re-enable when "On Device" is available
-    <string name="drawer_item_on_device">On device</string>-->
   <string name="drawer_item_settings">Stillingar</string>
   <string name="drawer_item_uploads_list">Uploads</string>
   <string name="drawer_close">Loka</string>
@@ -93,15 +87,13 @@
   <string name="action_share">Deila</string>
   <string name="common_yes">Já</string>
   <string name="common_no">Nei</string>
-  <string name="common_ok">Í lagi</string>
   <string name="common_remove_upload">Fjarlægja innsendingu</string>
   <string name="common_retry_upload">Reyna innsendingu aftur</string>
   <string name="common_cancel_sync">Hætta við samstillingu</string>
-  <string name="common_cancel">Hætta við</string>
   <string name="common_back">Til baka</string>
   <string name="common_save_exit">Vista &amp; fara út</string>
   <string name="common_error">Villa</string>
-  <string name="common_loading">Hleð inn …</string>
+  <string name="common_loading">Hleð inn…</string>
   <string name="common_unknown">óþekkt</string>
   <string name="common_error_unknown">Óþekkt villa</string>
   <string name="common_pending">Í bið</string>
@@ -109,9 +101,7 @@
   <string name="change_password">Breyta lykilorði</string>
   <string name="delete_account">Fjarlægja notandaaðgang</string>
   <string name="create_account">Stofna aðgang</string>
-  <string name="upload_chooser_title">Senda inn úr ...</string>
   <string name="uploader_info_dirname">Nafn möppu</string>
-  <string name="uploader_upload_in_progress_ticker">Sendi inn ...</string>
   <string name="uploader_upload_in_progress_content">%1$d%% Sendi inn %2$s</string>
   <string name="uploader_upload_succeeded_ticker">Innsending tókst</string>
   <string name="uploader_upload_succeeded_content_single">%1$s sent inn</string>
@@ -128,8 +118,6 @@
   <string name="uploads_view_group_current_uploads">Núverandi</string>
   <string name="uploads_view_group_failed_uploads">Mistókst (bankaðu til að reyna aftur)</string>
   <string name="uploads_view_group_finished_uploads">Hlaðið inn</string>
-  <string name="uploads_view_group_file_count">%d skrár</string>
-  <string name="uploads_view_group_file_count_single">%d skrá</string>
   <string name="uploads_view_upload_status_succeeded">Lokið</string>
   <string name="uploads_view_upload_status_cancelled">Hætt við</string>
   <string name="uploads_view_upload_status_paused">Í bið</string>
@@ -147,7 +135,6 @@
   <string name="uploads_view_upload_status_waiting_for_wifi">Bíð eftir þráðlausri nettengingu</string>
   <string name="uploads_view_later_waiting_to_upload">Bíð eftir að senda inn</string>
   <string name="uploads_view_unsupported_media_type">Óstudd gerð gagnamiðils</string>
-  <string name="downloader_download_in_progress_ticker">Sæki ...</string>
   <string name="downloader_download_in_progress_content">%1$d%% Sæki %2$s</string>
   <string name="downloader_download_succeeded_ticker">Niðurhal tókst</string>
   <string name="downloader_download_succeeded_content">%1$s niðurhalað</string>
@@ -204,8 +191,6 @@
   <string name="media_play_pause_description">Afspilun-eða-hlé hnappur</string>
   <string name="media_forward_description">Spóla-hratt-áfram hnappur</string>
   <string name="upload_from_camera_title">Mynd úr myndavél</string>
-  <string name="auth_getting_authorization">Fæ heimild ...</string>
-  <string name="auth_trying_to_login">Reyni að skrá inn …</string>
   <string name="auth_no_net_conn_title">Engin nettenging</string>
   <string name="auth_nossl_plain_ok_title">Örugg tenging ekki tiltæk.</string>
   <string name="auth_connection_established">Tengingu komið á</string>
@@ -260,7 +245,6 @@
   <string name="wait_checking_credentials">Athuga vistuð auðkenni</string>
   <string name="filedisplay_unexpected_bad_get_content">Óvænt vandamál; veldu skrána úr öðru forriti</string>
   <string name="filedisplay_no_file_selected">Engin skrá var valin</string>
-  <string name="activity_chooser_title">Senda tengil til ...</string>
   <string name="wait_for_tmp_copy_from_private_storage">Afrita skrá úr einkageymslu</string>
   <string name="oauth_check_onoff">Skrá inn með oAuth2</string>
   <string name="oauth_login_connection">Tengist við OAuth2-þjón…</string>
@@ -348,7 +332,6 @@
   <string name="log_send_history_button">Ferill sendinga</string>
   <string name="log_send_no_mail_app">Ekkert forrit fannst til að senda annála. Settu upp eitthvað tölvupóstforrit.</string>
   <string name="log_send_mail_subject">%1$s annálar Android-forrita</string>
-  <string name="log_progress_dialog_text">Hleð inn gögnum …</string>
   <string name="actionbar_select_all">Velja allt</string>
   <string name="saml_authentication_required_text">Auðkenningar krafist</string>
   <string name="saml_authentication_wrong_pass">Rangt lykilorð</string>
@@ -387,8 +370,6 @@
   <string name="prefs_camera_upload_source_path_title">Myndavélarmappa (%1$s)</string>
   <string name="prefs_camera_upload_source_path_title_required">krafist</string>
   <string name="prefs_camera_upload_source_path_title_optional">valkvætt</string>
-  <string name="prefs_camera_upload_behaviour_dialogTitle">Upprunaleg skrá verður...</string>
-  <string name="prefs_camera_upload_behaviour_title">Upprunaleg skrá verður...</string>
   <string name="upload_copy_files">Afrita skrá</string>
   <string name="upload_move_files">Færa skrá</string>
   <string name="pref_behaviour_entries_keep_file">áfram í upprunalegri möppu</string>
@@ -411,7 +392,7 @@
   <string name="share_via_link_edit_permission_read_only_label">Sækja / Skoða</string>
   <string name="share_via_link_edit_permission_read_and_write_label">Sækja / Skoða / Senda inn</string>
   <string name="share_get_public_link_button">Ná í tengil</string>
-  <string name="share_with_title">Deila með ...</string>
+  <string name="share_with_title">Deila með</string>
   <string name="share_with_edit_title">Deila með %1$s</string>
   <string name="share_search">Leita</string>
   <string name="search_users_and_groups_hint">Leita að notendum eða hópum</string>
