--- a/res/values-nb-rNO/strings.xml
+++ b/res/values-nb-rNO/strings.xml
@@ -1,7 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="about_android">%1$s Android app</string>
-  <string name="about_version">versjon %1$s</string>
   <string name="actionbar_sync">Oppdater konto</string>
   <string name="actionbar_upload">Last opp</string>
   <string name="actionbar_upload_from_apps">Innhold fra andre applikasjoner</string>
@@ -15,11 +13,7 @@
   <string name="actionbar_descending">Synkende</string>
   <string name="actionbar_sort_title">Sorter etter</string>
   <string name="actionbar_sort_by_name">A-Z</string>
-  <!--TODO re-enable when "Accounts" is available in Navigation Drawer-->
-  <!--<string name="drawer_item_accounts">Accounts</string>-->
   <string name="drawer_item_all_files">Alle filer</string>
-  <!--TODO re-enable when "On Device" is available
-    <string name="drawer_item_on_device">On device</string>-->
   <string name="drawer_item_settings">Innstillinger</string>
   <string name="drawer_item_uploads_list">Opplastinger</string>
   <string name="drawer_close">Lukk</string>
@@ -110,11 +104,9 @@
   <string name="action_share">Delt ressurs</string>
   <string name="common_yes">Ja</string>
   <string name="common_no">Nei</string>
-  <string name="common_ok">OK</string>
   <string name="common_remove_upload">Fjern opplasting</string>
   <string name="common_retry_upload">Prøv å laste opp igjen.</string>
   <string name="common_cancel_sync">Avbryt synkronisering</string>
-  <string name="common_cancel">Avbryt</string>
   <string name="common_back">Tilbake</string>
   <string name="common_save_exit">Lagre &amp; avslutt</string>
   <string name="common_error">Feil</string>
@@ -126,9 +118,7 @@
   <string name="change_password">Endre passord</string>
   <string name="delete_account">Fjern konto</string>
   <string name="create_account">Opprett konto</string>
-  <string name="upload_chooser_title">Last opp fra...</string>
   <string name="uploader_info_dirname">Mappenavn</string>
-  <string name="uploader_upload_in_progress_ticker">Laster opp...</string>
   <string name="uploader_upload_in_progress_content">%1$d%% Laster opp %2$s</string>
   <string name="uploader_upload_succeeded_ticker">Opplasting fullført</string>
   <string name="uploader_upload_succeeded_content_single">%1$s lastet opp</string>
@@ -145,8 +135,6 @@
   <string name="uploads_view_group_current_uploads">Nåværende</string>
   <string name="uploads_view_group_failed_uploads">Feilet (trykk for å prøve igjen)</string>
   <string name="uploads_view_group_finished_uploads">Opplastet</string>
-  <string name="uploads_view_group_file_count">%d filer</string>
-  <string name="uploads_view_group_file_count_single">%d Fil</string>
   <string name="uploads_view_upload_status_succeeded">Ferdig</string>
   <string name="uploads_view_upload_status_cancelled">Avbrutt</string>
   <string name="uploads_view_upload_status_paused">Pauset</string>
@@ -164,7 +152,6 @@
   <string name="uploads_view_upload_status_waiting_for_wifi">Venter på trådløstilkobling</string>
   <string name="uploads_view_later_waiting_to_upload">Venter på å laste op</string>
   <string name="uploads_view_unsupported_media_type">Mediatypen er ikke støttet</string>
-  <string name="downloader_download_in_progress_ticker">Laster ned...</string>
   <string name="downloader_download_in_progress_content">%1$d%% Laster ned %2$s</string>
   <string name="downloader_download_succeeded_ticker">Nedlasting fullført</string>
   <string name="downloader_download_succeeded_content">%1$s lastet ned</string>
@@ -228,8 +215,7 @@
   <string name="media_play_pause_description">Spill eller pause</string>
   <string name="media_forward_description">Spol fremover</string>
   <string name="upload_from_camera_title">Bilde fra kamera</string>
-  <string name="auth_getting_authorization">Henter autorisasjon ..</string>
-  <string name="auth_trying_to_login">Prøver å logge inn ..</string>
+  <string name="auth_getting_authorization">Henter godkjenning...</string>
   <string name="auth_no_net_conn_title">Ingen nettverkstilkobling</string>
   <string name="auth_nossl_plain_ok_title">Sikker tilkobling ikke tilgjengelig.</string>
   <string name="auth_connection_established">Tilkobling opprettet</string>
@@ -284,7 +270,6 @@
   <string name="wait_checking_credentials">Sjekker lagrede påloggingsdetaljer</string>
   <string name="filedisplay_unexpected_bad_get_content">Uforventet problem; vennligst velg filen fra en annen applikasjon</string>
   <string name="filedisplay_no_file_selected">Ingen fil ble valgt</string>
-  <string name="activity_chooser_title">Send lenke til ...</string>
   <string name="wait_for_tmp_copy_from_private_storage">Kopierer fil fra privat lager</string>
   <string name="oauth_check_onoff">Logg inn med oAuth2</string>
   <string name="oauth_login_connection">Kobler til OAuth2-server...</string>
@@ -375,7 +360,7 @@
   <string name="log_send_history_button">Send historik</string>
   <string name="log_send_no_mail_app">Ingen app for sending av logger funnet. Installer epost-app.</string>
   <string name="log_send_mail_subject">%1$s Android app logger</string>
-  <string name="log_progress_dialog_text">Laster data ...</string>
+  <string name="log_progress_dialog_text">Laster data...</string>
   <string name="actionbar_select_all">Velg alle</string>
   <string name="saml_authentication_required_text">Autentisering kreves</string>
   <string name="saml_authentication_wrong_pass">Feil passord</string>
@@ -414,8 +399,6 @@
   <string name="prefs_camera_upload_source_path_title">Kamera-mappe (%1$s)</string>
   <string name="prefs_camera_upload_source_path_title_required">obligatorisk</string>
   <string name="prefs_camera_upload_source_path_title_optional">valgfri</string>
-  <string name="prefs_camera_upload_behaviour_dialogTitle">Opprinnelig fil vil bli...</string>
-  <string name="prefs_camera_upload_behaviour_title">Opprinnelig fil vil bli...</string>
   <string name="upload_copy_files">Kopier fil</string>
   <string name="upload_move_files">Flytt fil</string>
   <string name="pref_behaviour_entries_keep_file">beholdt i opprinnelig mappe</string>
@@ -438,7 +421,7 @@
   <string name="share_via_link_edit_permission_read_only_label">Last ned / Se</string>
   <string name="share_via_link_edit_permission_read_and_write_label">Last ned / Se / Last opp</string>
   <string name="share_get_public_link_button">Hent lenke</string>
-  <string name="share_with_title">Del med ...</string>
+  <string name="share_with_title">Del med</string>
   <string name="share_with_edit_title">Del med %1$s</string>
   <string name="share_search">Søk</string>
   <string name="search_users_and_groups_hint">Søk etter brukere og grupper</string>
