--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -1,7 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="about_android">%1$s Android-app</string>
-  <string name="about_version">version %1$s</string>
   <string name="actionbar_sync">Uppdatera konto</string>
   <string name="actionbar_upload">Ladda upp</string>
   <string name="actionbar_upload_from_apps">Innehåll från andra program</string>
@@ -16,11 +14,7 @@
   <string name="actionbar_sort_by_name">A-Ö</string>
   <string name="actionbar_sort_by_date">Äldst - Nyast</string>
   <string name="actionbar_sort_by_size">Minst - Störst</string>
-  <!--TODO re-enable when "Accounts" is available in Navigation Drawer-->
-  <!--<string name="drawer_item_accounts">Accounts</string>-->
   <string name="drawer_item_all_files">Alla filer</string>
-  <!--TODO re-enable when "On Device" is available
-    <string name="drawer_item_on_device">On device</string>-->
   <string name="drawer_item_settings">Inställningar</string>
   <string name="drawer_item_uploads_list">Uppladdningar</string>
   <string name="drawer_close">Stäng</string>
@@ -91,11 +85,9 @@
   <string name="action_share">Dela</string>
   <string name="common_yes">Ja</string>
   <string name="common_no">Nej</string>
-  <string name="common_ok">OK</string>
   <string name="common_remove_upload">Ta bort uppladdning</string>
   <string name="common_retry_upload">Försök ladda upp igen</string>
   <string name="common_cancel_sync">Avbryt synkronisering</string>
-  <string name="common_cancel">Avbryt</string>
   <string name="common_back">Tillbaka</string>
   <string name="common_save_exit">Spara &amp; avsluta</string>
   <string name="common_error">Fel</string>
@@ -107,9 +99,7 @@
   <string name="change_password">Ändra lösenord</string>
   <string name="delete_account">Radera konto</string>
   <string name="create_account">Skapa konto</string>
-  <string name="upload_chooser_title">Ladda upp från ...</string>
   <string name="uploader_info_dirname">Mappnamn</string>
-  <string name="uploader_upload_in_progress_ticker">Laddar upp ...</string>
   <string name="uploader_upload_in_progress_content">%1$d%% Laddar upp %2$s</string>
   <string name="uploader_upload_succeeded_ticker">Uppladdning klar</string>
   <string name="uploader_upload_succeeded_content_single">%1$s uppladdad</string>
@@ -126,8 +116,6 @@
   <string name="uploads_view_group_current_uploads">Nuvarande</string>
   <string name="uploads_view_group_failed_uploads">Misslyckades (tryck för att försöka igen)</string>
   <string name="uploads_view_group_finished_uploads">Uppladdad</string>
-  <string name="uploads_view_group_file_count">%d filer</string>
-  <string name="uploads_view_group_file_count_single">%d fil</string>
   <string name="uploads_view_upload_status_succeeded">Slutförande</string>
   <string name="uploads_view_upload_status_cancelled">Avbruten</string>
   <string name="uploads_view_upload_status_paused">Pausad</string>
@@ -145,7 +133,6 @@
   <string name="uploads_view_upload_status_waiting_for_wifi">Väntar på anslutning till trådlöst nätverk</string>
   <string name="uploads_view_later_waiting_to_upload">Väntar på att ladda upp</string>
   <string name="uploads_view_unsupported_media_type">Saknar stöd för denna mediatyp</string>
-  <string name="downloader_download_in_progress_ticker">Laddar ner ...</string>
   <string name="downloader_download_in_progress_content">%1$d%% Laddar ner %2$s</string>
   <string name="downloader_download_succeeded_ticker">Nedladdning klar</string>
   <string name="downloader_download_succeeded_content">%1$s nedladdad</string>
@@ -201,8 +188,7 @@
   <string name="media_rewind_description">Bakåtspolningsknapp</string>
   <string name="media_play_pause_description">Spela- / Pausknapp</string>
   <string name="media_forward_description">Snappspolningsknapp</string>
-  <string name="auth_getting_authorization">Hämtar auktorisation ...</string>
-  <string name="auth_trying_to_login">Försöker logga in ...</string>
+  <string name="auth_getting_authorization">Får tillstånd...</string>
   <string name="auth_no_net_conn_title">Ingen nätverksanslutning</string>
   <string name="auth_nossl_plain_ok_title">Säker anslutning inte tillgänglig.</string>
   <string name="auth_connection_established">Anslutning etablerad</string>
@@ -257,7 +243,6 @@
   <string name="wait_checking_credentials">Kontrollerar lagrade inloggningsuppgifter</string>
   <string name="filedisplay_unexpected_bad_get_content">Oväntat problem; prova annat program för aktuell fil</string>
   <string name="filedisplay_no_file_selected">Ingen fil vald</string>
-  <string name="activity_chooser_title">Sänd länk till ...</string>
   <string name="wait_for_tmp_copy_from_private_storage">Kopierar fil från privat lagring</string>
   <string name="oauth_check_onoff">Logga in med oAuth2.</string>
   <string name="oauth_login_connection">Ansluter till OAuth2 autentiseringsservern...</string>
@@ -343,7 +328,7 @@
   <string name="log_send_history_button">Historik skickat</string>
   <string name="log_send_no_mail_app">Kunde inte hitta program för att skicka loggar. Installera ett e-postprogram</string>
   <string name="log_send_mail_subject">%1$s Android app logs</string>
-  <string name="log_progress_dialog_text">Laddar data ...</string>
+  <string name="log_progress_dialog_text">Laddar data...</string>
   <string name="actionbar_select_all">Välj allt</string>
   <string name="saml_authentication_required_text">Autentisering krävs</string>
   <string name="saml_authentication_wrong_pass">Fel lösenord</string>
@@ -380,8 +365,6 @@
   <string name="prefs_camera_upload_source_path_title">Kameramapp (%1$s)</string>
   <string name="prefs_camera_upload_source_path_title_required">krävs</string>
   <string name="prefs_camera_upload_source_path_title_optional">valfritt</string>
-  <string name="prefs_camera_upload_behaviour_dialogTitle">Originalfilen kommer att...</string>
-  <string name="prefs_camera_upload_behaviour_title">Originalfilen kommer att...</string>
   <string name="upload_copy_files">Kopiera fil</string>
   <string name="upload_move_files">Flytta fil</string>
   <string name="pref_behaviour_entries_keep_file">behållas i orginalmapp</string>
@@ -402,7 +385,7 @@
   <string name="share_via_link_password_label">Lösenord</string>
   <string name="share_via_link_password_title">Säkrad</string>
   <string name="share_get_public_link_button">Hämta länk</string>
-  <string name="share_with_title">Dela med</string>
+  <string name="share_with_title">Delad med</string>
   <string name="share_with_edit_title">Dela med %1$s</string>
   <string name="share_search">Sök</string>
   <string name="search_users_and_groups_hint">Sök användare och grupper</string>
