--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -1,7 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="about_android">%1$s Android 應用程式</string>
-  <string name="about_version">版本 %1$s</string>
   <string name="actionbar_sync">更新檔案列表</string>
   <string name="actionbar_upload">上傳檔案</string>
   <string name="actionbar_upload_from_apps">其他應用程序的內容</string>
@@ -14,11 +12,7 @@
   <string name="actionbar_sort">排序</string>
   <string name="actionbar_sort_title">排序依照</string>
   <string name="actionbar_sort_by_name">A-Z</string>
-  <!--TODO re-enable when "Accounts" is available in Navigation Drawer-->
-  <!--<string name="drawer_item_accounts">Accounts</string>-->
   <string name="drawer_item_all_files">所有檔案</string>
-  <!--TODO re-enable when "On Device" is available
-    <string name="drawer_item_on_device">On device</string>-->
   <string name="drawer_item_settings">設定</string>
   <string name="drawer_item_uploads_list">上傳</string>
   <string name="drawer_close"> 關閉</string>
@@ -92,15 +86,13 @@
   <string name="action_share">分享</string>
   <string name="common_yes">是</string>
   <string name="common_no">否</string>
-  <string name="common_ok">好</string>
   <string name="common_remove_upload">移除上傳</string>
   <string name="common_retry_upload">重試上傳</string>
   <string name="common_cancel_sync">取消同步</string>
-  <string name="common_cancel">取消</string>
   <string name="common_back">返回</string>
   <string name="common_save_exit">儲存；離開。</string>
   <string name="common_error">錯誤</string>
-  <string name="common_loading">載入 …</string>
+  <string name="common_loading">載入中…</string>
   <string name="common_unknown">未知</string>
   <string name="common_error_unknown">未知的錯誤</string>
   <string name="common_pending">等候中</string>
@@ -108,9 +100,7 @@
   <string name="change_password">變更密碼</string>
   <string name="delete_account">刪除帳號</string>
   <string name="create_account">建立帳號</string>
-  <string name="upload_chooser_title">更新自 ...</string>
   <string name="uploader_info_dirname">資料夾名稱</string>
-  <string name="uploader_upload_in_progress_ticker">更新中 ...</string>
   <string name="uploader_upload_in_progress_content">%1$d%% 上傳中 %2$s</string>
   <string name="uploader_upload_succeeded_ticker">更新成功</string>
   <string name="uploader_upload_succeeded_content_single">%1$s 已上傳</string>
@@ -124,8 +114,6 @@
   <string name="uploads_view_group_current_uploads">目前</string>
   <string name="uploads_view_group_failed_uploads">失敗 (輕觸可重試)</string>
   <string name="uploads_view_group_finished_uploads">已上傳</string>
-  <string name="uploads_view_group_file_count">%d 個檔案</string>
-  <string name="uploads_view_group_file_count_single">%d 個檔案</string>
   <string name="uploads_view_upload_status_succeeded">完成</string>
   <string name="uploads_view_upload_status_cancelled">已取消</string>
   <string name="uploads_view_upload_status_paused">已暫停</string>
@@ -142,7 +130,6 @@
   <string name="uploads_view_upload_status_waiting_for_wifi">等待無線網路連線</string>
   <string name="uploads_view_later_waiting_to_upload">上傳等候中</string>
   <string name="uploads_view_unsupported_media_type">不支援的媒體類型</string>
-  <string name="downloader_download_in_progress_ticker">下載中 ...</string>
   <string name="downloader_download_in_progress_content">%1$d%% 下載中 %2$s</string>
   <string name="downloader_download_succeeded_ticker">下載成功</string>
   <string name="downloader_download_succeeded_content">%1$s 已下載</string>
@@ -198,8 +185,7 @@
   <string name="media_play_pause_description">播放或暫停按鍵</string>
   <string name="media_forward_description">快轉按鍵</string>
   <string name="upload_from_camera_title">相片</string>
-  <string name="auth_getting_authorization">授權中... ...</string>
-  <string name="auth_trying_to_login">登入中... ...</string>
+  <string name="auth_getting_authorization">登入中...</string>
   <string name="auth_no_net_conn_title">沒有網際網路連線</string>
   <string name="auth_nossl_plain_ok_title">安全連線不可用。</string>
   <string name="auth_connection_established">連線已建立</string>
@@ -253,7 +239,6 @@
   <string name="wait_checking_credentials">檢查儲存的密碼</string>
   <string name="filedisplay_unexpected_bad_get_content">未知的問題; 請選擇其他程式開啟檔案</string>
   <string name="filedisplay_no_file_selected">沒有挑選檔案</string>
-  <string name="activity_chooser_title">傳送連結至 ...</string>
   <string name="wait_for_tmp_copy_from_private_storage">由私有的儲存空間複製檔案中</string>
   <string name="oauth_check_onoff">以 oAuth2 方式登入</string>
   <string name="ssl_validator_reason_cert_not_trusted">- 這個伺服器使用未被信任的憑證</string>
@@ -338,7 +323,7 @@
   <string name="log_send_history_button">傳送歷史</string>
   <string name="log_send_no_mail_app">沒有傳送紀錄的軟體. 請安裝郵件軟體</string>
   <string name="log_send_mail_subject">%1$s Android 應用程式記錄</string>
-  <string name="log_progress_dialog_text">裝載資料中...</string>
+  <string name="log_progress_dialog_text">資料載入中...</string>
   <string name="actionbar_select_all">全選</string>
   <string name="saml_authentication_required_text">必須驗證</string>
   <string name="saml_authentication_wrong_pass">密碼錯誤</string>
@@ -377,8 +362,6 @@
   <string name="prefs_camera_upload_source_path_title">相機資料夾 (%1$s)</string>
   <string name="prefs_camera_upload_source_path_title_required">必填</string>
   <string name="prefs_camera_upload_source_path_title_optional">選填</string>
-  <string name="prefs_camera_upload_behaviour_dialogTitle">原始的檔案將會...</string>
-  <string name="prefs_camera_upload_behaviour_title">原始的檔案將會...</string>
   <string name="upload_copy_files">複製檔案</string>
   <string name="upload_move_files">移動檔案</string>
   <string name="pref_behaviour_entries_keep_file">保留在原先的資料夾</string>
@@ -401,7 +384,7 @@
   <string name="share_via_link_edit_permission_read_only_label">下載 / 檢視</string>
   <string name="share_via_link_edit_permission_read_and_write_label">下載 / 檢視 / 上傳</string>
   <string name="share_get_public_link_button">取得連結</string>
-  <string name="share_with_title">分享...</string>
+  <string name="share_with_title">分享給別人</string>
   <string name="share_with_edit_title">與 %1$s 分享</string>
   <string name="share_search">搜尋</string>
   <string name="search_users_and_groups_hint">找尋使用者或群組</string>
